Formulaire JS css Html PHP

--- a/inscription.html
+++ b/inscription.html
@@ -16,9 +16,37 @@
                 <li><a href="#">Lien2</a></li>
                 <li><a href="#">Lien3</a></li>
                 <li><a href="#">Lien4</a></li>
+                <li>
+                    <button class="btn" id="displayform">Se connecter</button>
+                </li>
             </ul>
-            <button >Se connecter</button>
+
         </nav>
+        <section>
+            <div class="sec-container">
+                <div class="form-wrapper">
+                     <div class="card">
+                     <div class="card-header">
+                    <div id="forlogin" class="form-header active"> Se connecter</div>
+                    <div id="forRegister" class="form-header">S'inscrire</div>
+                </div>
+                <div class="card-body" id="formContainer">
+                    <form action="" id="formLogin">
+                        <input type="text" class="form-control" placeholder="@utilisateur">
+                        <input type="password" class="form-control" placeholder="@Mot de passe" name="" id="">
+                        <button class="formButton">Connexion</button>
+                    </form>
+                    <form action="" id="formLogin">
+                        <input type="text" class="form-control" name="nom" id="" placeholder="@utilisateur">
+                        <input type="password" class="form-control" placeholder="@Mot de passe" name="" id="">
+                        <input type="password" class="form-control" placeholder="@Confirmer mot de passe" name="" id="">
+                        <button class="formButton">Connexion</button>
+                    </form>
+                        </div>
+                      </div>
+                   </div>
+                </div>
+        </section>
     </div>
     <script>
         
