formulaire de connexion + modif

--- a/inscription.html
+++ b/inscription.html
@@ -36,7 +36,7 @@
                         <input type="password" class="form-control" placeholder="@Mot de passe" name="" id="">
                         <button class="formButton">Connexion</button>
                     </form>
-                    <form action="" id="formLogin">
+                    <form action="" id="formLogin" class="toggleForm">
                         <input type="text" class="form-control" name="nom" id="" placeholder="@utilisateur">
                         <input type="password" class="form-control" placeholder="@Mot de passe" name="" id="">
                         <input type="password" class="form-control" placeholder="@Confirmer mot de passe" name="" id="">
