--- a/inscription.html
+++ b/inscription.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="ima">
+        <div class="image">
             <div class="form-box">
                 <h2>Register</h2>
                 <div class="input-box">
