--- a/inscription.html
+++ b/inscription.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="image">
             <div class="form-box">
+                <div class="form">
                 <h2>Register</h2>
                 <div class="input-box">
                     <input type="text">
@@ -23,6 +24,7 @@
                     <input type="password">
                     <label>Password</label>
                 </div>
+            </div>
             </div>
         </div>
     </div>
