--- a/inscription.html
+++ b/inscription.html
@@ -13,17 +13,22 @@
                 <div class="form">
                 <h2>Register</h2>
                 <div class="input-box">
-                    <input type="text">
+                    <input type="text" required>
                     <label >User name</label>
                 </div>
                 <div class="input-box">
-                    <input type="text">
+                    <input type="text" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="password">
+                    <input type="password" required>
                     <label>Password</label>
                 </div>
+                <div class="group">
+                    <a href="#">Forgot password</a>
+                    <a href="#">Sign up</a>
+                </div>
+                <button>Sign up</button>
             </div>
             </div>
         </div>
